Indent Java code by 4 spaces